# auto_ipc

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: ipc.action
install/: auto_ipc.noetic.rosinstall
scripts/: client.py  server.py
